force-app/main/default/objects/SurveyResponse__c/SurveyResponse__c.object-meta.xml
<CustomObject>
    <label>SurveyResponse</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>SurveyResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>