force-app/main/default/objects/SurveyResponse__c/fields/ResponseText__c.field-meta.xml
<CustomField>
    <fullName>ResponseText__c</fullName>
    <label>ResponseText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>