force-app/main/default/objects/SurveyResponse__c/fields/SurveyQuestion__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyQuestion</label>
    <referenceTo>SurveyQuestion__c</referenceTo>
    <relationshipLabel>SurveyResponses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <type>Lookup</type>
</CustomField>