force-app/main/default/objects/SurveyResponse__c/fields/SurveyQuestionChoice__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestionChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyQuestionChoice</label>
    <referenceTo>SurveyQuestionChoice__c</referenceTo>
    <relationshipLabel>SurveyResponses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <type>Lookup</type>
</CustomField>